Rest template, CORS configuration and scheduling cron job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ logging.level.org.springframework=info
 logging.level.web=info
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.messages.basename=translations
+#server.servlet.context-path=/rest
 #spring.security.user.name=chandu
 #spring.security.user.password=chandu@123
 
 #Actuator
 management.endpoints.web.exposure.include=*
+#management.server.port=8082
